# apertium-isl-swe

./: .gitattributes  .gitignore  Makefile.am  README  apertium-is-sv.is-sv.dix  apertium-is-sv.is-sv.rlx  apertium-is-sv.is-sv.t1x  apertium-is-sv.is-sv.t2x  apertium-is-sv.sv-is.rlx  apertium-is-sv.sv-is.t1x  apertium-is-sv.sv-is.t2x  apertium-is-sv.sv.dix  apertium-isl-swe.isl-swe.t1x  configure.ac  modes.xml  wiki-tests.sh
dev/: generation-summary.is-sv.txt  generation-test.is-sv.sh  generation-test.sv-is.sh  testvoc-summary.is-sv.txt  testvoc-summary.sv-is.txt  testvoc.sh
dev/bidix/: pending_adjectives.txt  pending_adverbs.txt  pending_determiners.txt  pending_nouns.txt  pending_numerals.txt  pending_proper_nouns.txt
test/: isl-swe-pending-biltrans-expected.txt  isl-swe-pending-chunker-expected.txt  isl-swe-pending-disam-expected.txt  isl-swe-pending-generator-expected.txt  isl-swe-pending-generator-gold.txt  isl-swe-pending-input.txt  isl-swe-pending-morph-expected.txt  isl-swe-pending-postchunk-expected.txt  isl-swe-pending-pretransfer-expected.txt  swe-isl-pending-biltrans-expected.txt  swe-isl-pending-chunker-expected.txt  swe-isl-pending-disam-expected.txt  swe-isl-pending-generator-expected.txt  swe-isl-pending-generator-gold.txt  swe-isl-pending-input.txt  swe-isl-pending-morph-expected.txt  swe-isl-pending-postchunk-expected.txt  swe-isl-pending-tagger-expected.txt  tests.json
